Add test table and ContentProvider to store test data. Will add the logic for show images in the next commit.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:authorities="com.ligux.tools.provider.res_provider"
+            android:name="com.ligux.tools.exrecyclerview.db.ResProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
